# comb-method-lab1

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build.ps1
include/: app.h  expression.h  function_provider.h  main.h  scientific_format.h  solver.h
include/tasks/task_6_1/: expression_6_1.h  function_provider_6_1.h  solver_6_1.h  task_6_1.h
include/tasks/task_6_2/: khaletsky.h  task_6_2_1.h  task_6_2_2.h  task_6_2_3.h
src/: app.c  expression.c  function_provider.c  main.c  scientific_format.c  solver.c
src/tasks/task_6_1/: expression_6_1.c  function_provider_6_1.c  solver_6_1.c  task_6_1.c
src/tasks/task_6_2/: khaletsky.c  task_6_2_1.c  task_6_2_2.c  task_6_2_3.c
